<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorTextHint"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/dollar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEXTO"
        android:id="@+id/text_dialog"
        android:layout_below="@+id/a"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/text_dialog"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorTextHint"
            android:gravity="center_vertical|center_horizontal"
            android:text="BUY"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btn_dialog_ok"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"

            android:background="@color/colorTextHint"
            android:gravity="center_vertical|center_horizontal"
            android:text="CANCEL"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>