<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.stelios.songle.MapsActivity" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMapToBag"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="MY WORDS"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:textStyle="bold" />
    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        map:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </android.support.v7.widget.Toolbar>
-->

</RelativeLayout>


