...
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_below="@+id/text_welcome"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton_songs"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/appCompatButton_play"
        android:layout_below="@+id/appCompatButton_play"
        android:layout_marginTop="25dp"
        android:background="@color/colorTextHint"
        android:elevation="0dp"
        android:text="Songs"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
    <!--android:layout_below="@+id/appCompatButton_bag"
        android:layout_alignStart="@+id/appCompatButton_bag" />

...
